added documentation and fixed minor issues