@@ -1,3 +1,3 @@
 #!/bin/bash
 
-java -jar Scobo.jar
+java --module-path /usr/share/openjfx/lib --add-modules=javafx.controls,javafx.fxml,javafx.base,javafx.media,javafx.web,javafx.swing -jar Scobo.jar
